17751
I have many doubts as to whether there is any point in continuing to report specialization bugs, but since it's a regression from 2.9...
{code}
trait A[@specialized(Byte) T1] {
  def f[@specialized(Float) T2](x: T1, y: T2): Any = 5
}

trait B extends A[Byte] {
  override def f[@specialized(Float) T2](x: Byte, y: T2): String = ""
}
/***
c.scala:6: error: type mismatch;
 found   : Any
 required: String
  override def f[@specialized(Float) T2](x: Byte, y: T2): String = ""
               ^
one error found
***/
{code}
